[profile.release]
debug = true
lto = false # TODO: this can be changed?
strip = true

[workspace]
members = [
    #"kernel",

    "development/image",

    #"lib/aarch64",
    #"lib/allocator",
    #"lib/fat32",
    "libraries/format",
    "libraries/format/format_derive",
    "libraries/hardware",
    #"lib/persistent",
    #"lib/kernel_api",
    #"lib/pi",
    "libraries/shim",
    #"lib/volatile",

    #"user",
]