[profile.release]
debug = true
lto = false # TODO: this can be changed?
#strip = true   # TODO: fix this on apple silicon

[workspace]
members = [
    "dev/image",
    "kernel",
    "lib/aarch64",
    "lib/allocator",
    "lib/fat32",
    "lib/filesystem",
    "lib/jlib",
    "lib/kernel_api",
    "lib/pi",
    "lib/shim",
    "lib/volatile",
    "lib/xmodem",
    "user",
]