[package]
name = "kernel"
version = "0.2.3"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Joseph Gulian <jgulian@gatech.edu>"
]
edition = "2021"

[dependencies]
aarch64 = { path = "../lib/aarch64/" }
allocator = { path = "../lib/allocator" }
elf = { path = "../lib/elf" }
fat32 = { path = "../lib/fat32/", features = ["no_std"] }
filesystem = { path = "../lib/filesystem/" }
kernel_api = { path = "../lib/kernel_api", features = [] }
pi = { path = "../lib/pi" }
shim = { path = "../lib/shim", features = ["no_std", "alloc"] }

log = "0.4"

[dev-dependencies]
shim = { path = "../lib/shim", features = ["alloc"] }
