[package]
name = "kernel"
version = "0.2.3"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Joseph Gulian <jgulian@gatech.edu>"
]
edition = "2021"

[dependencies]
aarch64 = { path = "../lib/aarch64/" }
allocator = { path = "../lib/allocator" }
fat32 = { path = "../lib/vfat/", features = ["no_std"] }
filesystem = { path = "../lib/filesystem/", features = ["no_std"] }
kernel_api = { path = "../lib/kernel_api" }
pi = { path = "../lib/pi" }
shim = { path = "../lib/shim", features = ["alloc", "no_std"] }

log = "0.4"

[dev-dependencies]
shim = { path = "../lib/shim", features = ["alloc"] }

[features]
default = ["cow_fork"]
cow_fork = [] # TODO: remove post class
monitor_lab2 = []