[package]
name = "user"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Joseph Gulian <jgulian@gatech.edu>"
]
edition = "2021"

[dependencies]
aarch64 = { path = "../lib/aarch64/" }
kernel_api = { path = "../lib/kernel_api" }
shim = { path = "../lib/shim", features = ["no_std"] }

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "fib"
path = "src/bin/fib.rs"

[[bin]]
name = "heap"
path = "src/bin/heap.rs"

[[bin]]
name = "init"
path = "src/bin/init.rs"

[[bin]]
name = "shell"
path = "src/bin/shell.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"