[package]
name = "fat32"
version = "0.1.0"
authors = [
    "Sergio Benitez <sb@sergio.bz>",
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Joseph Gulian <jgulian@gatech.edu>"
]
edition = "2021"

[dependencies]
filesystem = { path = "../filesystem" }
format = { path = "../format" }
shim = { path = "../shim", features = ["alloc"] }
log = "0.4" #FIXME: remove

[dev-dependencies]
rand = "0.8.5"

[features]
no_std = ["shim/no_std"]
