[package]
name = "kernel_api"
version = "0.1.0"
authors = [
    "Taesoo Kim <taesoo@gatech.edu>",
    "Yechan Bae <yechan@gatech.edu>",
    "Sujin Park <sujin.park@gatech.edu>",
    "Mansour Alharthi <mansourah@gatech.edu>",
    "Joseph Gulian <jgulian@gatech.edu>"
]
edition = "2021"

[dependencies]
shim = { path = "../../lib/shim", features = ["no_std"] }
cfg-if = "1.0.0"

[dev-dependencies]
shim = { path = "../../lib/shim" }

[features]
default = ["user-space"]
"user-space" = []